// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table block renders table and unsupported cells 1`] = `
<div>
  <div
    class="reark-table-wrapper"
  >
    <table
      class="reark-table"
    >
      <tbody>
        <tr>
          <th
            class="reark-table__th "
          >
            <div
              class="reark-unsupported-block"
            >
              <strong>
                Unsupported block type: 
                97
              </strong>
            </div>
          </th>
          <th
            class="reark-table__th "
          >
            <div
              class="reark-unsupported-block"
            >
              <strong>
                Unsupported block type: 
                97
              </strong>
            </div>
          </th>
        </tr>
        <tr>
          <td
            class="reark-table__td "
          >
            <div
              class="reark-unsupported-block"
            >
              <strong>
                Unsupported block type: 
                97
              </strong>
            </div>
          </td>
          <td
            class="reark-table__td "
          >
            <div
              class="reark-unsupported-block"
            >
              <strong>
                Unsupported block type: 
                97
              </strong>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders table with no cells 1`] = `
<div>
  <div
    class="reark-table-wrapper"
  >
    <table
      class="reark-table"
    >
      <tbody>
        <tr />
        <tr />
      </tbody>
    </table>
  </div>
</div>
`;
